# cubebuild

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/cubebuild/Block/: Block.h  BlockType.h
include/cubebuild/Camera/: Camera.h
include/cubebuild/Shader/: Shader.h
include/cubebuild/Skybox/: Skybox.h
include/cubebuild/Utility/: Generator.h  PerlinNoise.h
include/cubebuild/World/: Block.h  Chunk.h  World.h
include/cubebuild/core/: Camera.h  FrustumCulling.h  GLContextManager.h
include/cubebuild/game/: Game.h  Player.h
include/cubebuild/graphics/: Renderer.h  Shader.h  Texture.h  UIManager.h  Window.h
resources/shaders/: fragment_shader.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex_shader.glsl
src/: glad.c  main.cpp
src/cubebuild/: Shader.cpp  Skybox.cpp  Texture.cpp
src/cubebuild/Utility/: PerlinNoise.cpp
src/cubebuild/World/: Block.cpp  Chunk.cpp  World.cpp
src/cubebuild/core/: Camera.cpp  FrustumCulling.cpp  GLContextManager.cpp  Generator.cpp
src/cubebuild/game/: Player.cpp
src/cubebuild/graphics/: Skybox.cpp  UIManager.cpp  Window.cpp
